@@ -9,6 +9,8 @@ Version 0.3
 - recognizer defines the engine's audio format
 - started to work on a SAPI layer
 - bugfix: root rule is set correctly after all other changes have been committed
+- bugfix: QUEUE_EMPTY was not set in synthesizer after an allocate
+- bugfix: state2String did not consider the FOCUSED and DEFOCUSED states
 
 Version 0.2
 ============
